--- a/mainPage.html
+++ b/mainPage.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
 </head>
 <body>
+    <div class="header">
+        <header>
+            <h1 class="title">
+                Darcy Boddey
+            </h1>
+            <section>
+                <div class="nav">
 
+                </div>
+            </section>
+        </header>
+    </div>
 </body>
 </html>
