--- a/mainPage.html
+++ b/mainPage.html
@@ -7,17 +7,27 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div class="header">
+    <section class="header">
         <header>
-            <h1 class="title">
-                Darcy Boddey
-            </h1>
             <section>
                 <div class="nav">
-
+                    <a>Contact Me</a>
+                    <a>About Me</a>
                 </div>
             </section>
+            <!--class="title" linked to .title in the css file-->
+            <h1 class="title">
+                Darcy
+            </h1>
         </header>
+    </section>
+    <div>
+        <p class="welcome">
+            Hello There.
+        </p>
+        <p class="intro">
+            I am Darcy Boddey, a Software Engineering student at the University of Leicester.
+        </p>
     </div>
 </body>
 </html>
