--- a/mainPage.html
+++ b/mainPage.html
@@ -12,22 +12,41 @@
             <section>
                 <div class="nav">
                     <a>Contact Me</a>
+                    <a>Projects</a>
                     <a>About Me</a>
                 </div>
             </section>
             <!--class="title" linked to .title in the css file-->
             <h1 class="title">
-                Darcy
+                Darcy.
             </h1>
         </header>
     </section>
     <div>
-        <p class="welcome">
-            Hello There.
+        <p class="headerText">
+            Hello There,
         </p>
         <p class="intro">
             I am Darcy Boddey, a Software Engineering student at the University of Leicester.
         </p>
     </div>
+    <section>
+        <div>
+            <p class="headerText">About Me</p>
+            <section class="text">
+                <p>I am an 18 Year old student from England, studying software engineering at the University of Leicester.
+                    I have studied Computer Science since I was 13 and have a great passion for it. </p>
+                <br>
+
+            </section>
+        </div>
+        <div>
+            <p class="headerText">Projects</p>
+        </div>
+        <div>
+            <p class="headerText">Contact Me</p>
+        </div>
+
+    </section>
 </body>
 </html>
